Fix empty panel z-index

--- a/src/styles/components/containers/_panel.scss
+++ b/src/styles/components/containers/_panel.scss
@@ -63,7 +63,7 @@
     padding: var(--spacing-half-unit);
     background-color: var(--panel-background);
     box-sizing: border-box;
-    @include z-index(orbit);
+    @include z-index(floor);
     display: flex;
     &__message {
       text-align: center;
